--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "lx-fivem-docs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "bin": {
     "lx-fivem-docs": "dist/index.js"
   },
-  "files": ["dist", "bin"],
+  "files": [
+    "dist",
+    "bin"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format esm,cjs --dts --sourcemap",
     "start": "node dist/index.js",
